# Projeto_Garagem

./: README.md  db.sqlite3  pyproject.toml
backend/config/: settings.py  urls.py
backend/garagem/: admin.py
backend/garagem/migrations/: 0003_acessorios_cor.py  0005_veiculo.py
backend/garagem/models/: marca.py  veiculo.py
backend/garagem/views/: __init__.py  veiculo.py
config/: settings.py  urls.py
garagem/: admin.py
garagem/migrations/: 0001_initial.py  0002_categoria.py  0002_veiculo_imagem.py  0004_alter_cor_options_modelo.py  0006_veiculo_acessorios.py  0007_alter_acessorios_options.py
garagem/models/: __init__.py  acessorios.py  cor.py  marca.py  modelo.py  veiculo.py
garagem/serializers/: __init__.py  acessorios.py  categoria.py  cor.py  veiculo.py
garagem/views/: acessorios.py  categoria.py  cor.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
