[project]
name = "Projeto_Garagem"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Santiago de Oliveira", email = "santiagodeoliveira2004@gmail.com"},
]
dependencies = [
    "django>=5.0.3",
    "djangorestframework>=3.15.1",
    "django-extensions>=3.2.3",
    "pydotplus>=2.0.2",
    "setuptools>=69.2.0",
    "python-magic>=0.4.27",
    "Pillow>=10.3.0",
    "drf-spectacular>=0.27.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
